--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RMCGEO - Cartografia e Agrimensura</title>
-    <meta name="description" content="Portfolio pessoal sobre projetos de cartografia e agrimensura" />
+    <meta name="description" content=",Portfolio pessoal sobre projetos de cartografia e agrimensura" />
     <meta name="author" content="Portfolio Pessoal" />
 
     <meta property="og:title" content="RMCGEO - Cartografia e Agrimensura" />
