--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
   <title>Redirecionando...</title>
   <script>
     // Redirecionar para a página principal
-    window.location.replace('/rmcgeosite/#' + window.location.pathname.replace(/^\/rmcgeosite/, ''));
+    window.location.replace('./#' + window.location.pathname.replace(/^\/[^\/]+/, ''));
   </script>
 </head>
 <body>
