--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RMCGEO - Cartografia e Agrimensura</title>
-    <meta name="description" content=",Portfolio pessoal sobre projetos de cartografia e agrimensura" />
-    <meta name="author" content="Portfolio Pessoal" />
-
-    <meta property="og:title" content="RMCGEO - Cartografia e Agrimensura" />
-    <meta property="og:description" content="Portfolio pessoal sobre projetos de cartografia e agrimensura" />
+    <meta name="description" content="RMCGEO - Soluções profissionais em cartografia e agrimensura" />
+    <meta name="keywords" content="cartografia, agrimensura, topografia, QGIS, mapeamento" />
+    <meta name="author" content="RMCGEO" />
+    <meta name="theme-color" content="#4CAF50" />
+    <meta property="og:title" content="RMCGEO - Cartografia & Agrimensura" />
+    <meta property="og:description" content="Soluções profissionais em mapeamento e levantamento topográfico" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://rmcgeo.com.br" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <title>RMCGEO - Cartografia & Agrimensura</title>
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
