--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="RMCGEO - Testando minhas ferramentas em software open source" />
     <meta name="keywords" content="cartografia, agrimensura, topografia, QGIS, mapeamento" />
@@ -15,9 +15,6 @@
     <meta property="og:image" content="/og-image.jpg" />
     <title>RMCGEO - Cartografia & Agrimensura</title>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
