--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="RMCGEO - Testando minhas ferramentas em software open source" />
+    <meta name="description" content="RMCGEO - ferramentas em software open source" />
     <meta name="keywords" content="cartografia, agrimensura, topografia, QGIS, mapeamento" />
     <meta name="author" content="RMCGEO" />
     <meta name="theme-color" content="#4CAF50" />
     <meta property="og:title" content="RMCGEO - Cartografia & Agrimensura" />
-    <meta property="og:description" content="Testando minhas ferramentas em software open source" />
+    <meta property="og:description" content="RMCGEO - ferramentas em software open source" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://rmcgeo.com.br" />
     <meta property="og:image" content="/og-image.jpg" />
